force-app/main/default/objects/SSR_Slack_Recipe__mdt/SSR_Slack_Recipe__mdt.object-meta.xml
<CustomObject>
    <description>Configuration Slack par recette SSR (channel ID, clé recette).</description>
    <label>SSR Slack Recipe</label>
    <pluralLabel>SSR Slack Recipes</pluralLabel>
</CustomObject>