force-app/main/default/objects/SSR_Slack_Recipe__mdt/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <description>ID Slack du channel cible (commence par C).</description>
    <label>Channel Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>