force-app/main/default/objects/SSR_Slack_Recipe__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Désactiver pour couper les envois sans supprimer la recette.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>