force-app/main/default/objects/SSR_Slack_Recipe__mdt/fields/Recipe_Key__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Key__c</fullName>
    <description>Identifiant stable de la recette (ex. recipe_01).</description>
    <externalId>true</externalId>
    <label>Recipe Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>